# memeLaunchpad-22

./: .env  Anchor.toml  README.md  package.json
docs/: SMART_CONTRACT_FUNCTIONS.md
programs/meme-launchpad/: Cargo.toml
programs/meme-launchpad/src/: lib.rs
programs/meme-launchpad/src/constants/: mod.rs
programs/meme-launchpad/src/errors/: mod.rs
programs/meme-launchpad/src/instructions/: buy_token.rs  create_token.rs  delete_token.rs  initialize.rs  launch_to_dex.rs  mod.rs  sell_token.rs  update_platform_settings.rs  withdraw_fees.rs
programs/meme-launchpad/src/states/: bonding_curve.rs  mod.rs  program_state.rs  token_info.rs  transaction.rs
tests/: meme-launchpad.ts
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/admin/: page.tsx
web/app/api/actions/trade/[address]/: route.ts
web/app/api/status/: route.ts
web/app/api/token/[address]/: route.ts
web/app/api/tokens/: route.ts
web/app/create/: page.tsx
web/app/dashboard/: page.tsx
web/app/explore/: page.tsx
web/app/launch/[tokenId]/: page.tsx
web/app/token/[tokenId]/: page.tsx
web/components/layout/: footer.tsx  main-nav.tsx
web/components/ui/: meme-card.tsx  resizable-navbar.tsx  sticky-scroll-reveal.tsx
web/programs/: meme_launchpad.json  meme_launchpad.ts  meme_token_launchpad.json  meme_token_launchpad.ts
web/service/: services.tsx
web/utils/: helpers.ts
